--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -341,7 +341,7 @@
                       <div class="section-header">
                         <div class="section-title-wrapper">
                           <div class="title-wrapper">
-                            <h2 class="section-title has_text_move_anim">Why Gharpayy?
+                            <h2 class="section-title has_text_move_anim" >Why Gharpayy?
     
                             </h2>
                           </div>
@@ -370,9 +370,13 @@
                   <div class="section-header">
                     <div class="section-title-wrapper">
                       <div class="title-wrapper">
-                        <h2 class="section-title has_text_move_anim">Find Your <span>Home</span> Now</h2>
+                        <h2 class="section-title has_text_move_anim" style="font-weight: 100;
+    font-size: 1.4em;">Find Your <span>Home</span> Now</h2>
                         <div class="subtitle-wrapper">
-                          <h3 class="section-subtitle mt-3">100% Refund Guarantee – If your admission is not confirmed, get a full refund.
+                          <h3 class="section-subtitle mt-3" style="    font-size: 2.2em;
+                          line-height: 1em;
+                          font-weight: 800;
+                          font-family: 'Kanit';">100% Refund Guarantee – If your admission is not confirmed, get a full refund.
   
                         </div>
   
@@ -428,7 +432,7 @@
                       <h3 class="number" >01</h3>
                       <div class="content accomodation">
                         <h3 class="title">Live with Your Friends</h3>
-                        <p class="text" style="color:#d8d8d8 !important;">
+                        <p class="text" style="color:#d8d8d8 !important;font-weight: 200;">
                           Rent a private room or a shared space with your besties.
                         </p>
                       </div>
@@ -441,7 +445,7 @@
                       <h3 class="number">02</h3>
                       <div class="content accommodation">
                         <h3 class="title">Flexible Rental Terms</h3>
-                        <p class="text" style="color:#d8d8d8 !important;">
+                        <p class="text" style="color:#d8d8d8 !important;font-weight: 200;">
                           Stay as little as 3 months with student-friendly contracts.
                         </p>
                       </div>
@@ -454,7 +458,7 @@
                       <h3 class="number">03</h3>
                       <div class="content accommodation">
                         <h3 class="title">Move-In Ready</h3>
-                        <p class="text" style="color:#d8d8d8 !important;">
+                        <p class="text" style="color:#d8d8d8 !important;font-weight: 200;">
                           Fully furnished rooms with a bed, wardrobe, AC, WiFi, and study desks.
                         </p>
                       </div>
@@ -485,13 +489,16 @@
       <div class="section-header">
         <div class="section-title-wrapper">
           <div class="title-wrapper">
-            <h2 class="section-title has_text_move_anim">
+            <h2 class="section-title has_text_move_anim" style="font-weight: 100;
+    font-size: 1.3em;">
               <span>Student</span> Accommodations Near Top Universities
             </h2>
           </div>
         </div>
         <div class="text-wrapper">
-          <p class="text has_fade_anim">We provide hand-picked student PGs near:</p>
+          <p class="text has_fade_anim" style="font-weight: 800;
+          font-size: 2.2em;
+          line-height: 1em;">We provide hand-picked student PGs near</p>
         </div>
       </div>
       <div class="features-wrapper-box">
@@ -500,7 +507,7 @@
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
               <img src="../../uni/christ.png" alt="Christ University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
-              <h3 class="title">Christ University</h3>
+              <h3 class="title bold-weight">Christ University</h3>
               <p class="text">Bannerghatta, Hosur Road, Koramangala</p>
             </div>
           </div>
@@ -509,7 +516,7 @@
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
               <img src="../../uni/jain.png" alt="Jain University Logo" style="width: 120px; height: auto; margin-bottom: 10px;">
-              <h3 class="title">Jain University</h3>
+              <h3 class="title bold-weight">Jain University</h3>
               <p class="text">Jayanagar, Brigade Road, Koramangala</p>
             </div>
           </div>
@@ -518,7 +525,7 @@
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
               <img src="../../uni/rv.png" alt="RV College Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
-              <h3 class="title">RV College</h3>
+              <h3 class="title bold-weight">RV College</h3>
               <p class="text">Mysore Road, Nagarbhavi</p>
             </div>
           </div>
@@ -527,7 +534,7 @@
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
               <img src="../../uni/ramiah.png" alt="MS Ramaiah College Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
-              <h3 class="title">MS Ramaiah College</h3>
+              <h3 class="title bold-weight">MS Ramaiah College</h3>
               <p class="text">Mathikere, Yeshwanthpur</p>
             </div>
           </div>
@@ -536,7 +543,7 @@
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
               <img src="../../uni/presidency.png" alt="Presidency University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
-              <h3 class="title">Presidency University</h3>
+              <h3 class="title bold-weight">Presidency University</h3>
               <p class="text">Yelahanka, Rajankunte</p>
             </div>
           </div>
@@ -545,7 +552,7 @@
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
               <img src="../../uni/dayanand.png" alt="Dayananda Sagar University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
-              <h3 class="title">Dayananda Sagar University</h3>
+              <h3 class="title bold-weight">Dayananda Sagar University</h3>
               <p class="text">Kumaraswamy Layout, JP Nagar</p>
             </div>
           </div>
@@ -553,7 +560,7 @@
           <!-- And Many More -->
           <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
             <div class="content">
-              <h3 class="title">And Many More...</h3>
+              <h3 class="title bold-weight">And Many More...</h3>
             </div>
           </div>
 
@@ -569,6 +576,7 @@
 
 
 
+
           <!-- features area start  -->
           <section class="features-area">
             <div class="container">
@@ -576,7 +584,9 @@
                 <div class="section-header">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h2 class="section-title has_text_move_anim"><span>How</span> It Works</h2>
+                      <h2 class="section-title has_text_move_anim" style="font-weight: 800;
+                      font-size: 2.2em;
+                      line-height: 1em; font-family: 'Kanit';"><span>How</span> It Works</h2>
                     </div>
                   </div>
                   <div class="text-wrapper">
@@ -591,8 +601,8 @@
                         <img class="show-dark" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20-light.webp" alt="feature icon">
                       </div>
                       <div class="content">
-                        <h3 class="title">Browse Listings</h3>
-                        <p class="text">Explore PG options & virtual tours online.</p>
+                        <h3 class="title bold-weight" >Browse Listings</h3>
+                        <p class="text light-weight">Explore PG options & virtual tours online.</p>
                       </div>
                     </div>
                     <div class="feature-box has_fade_anim how" data-fade-from="bottom">
@@ -601,8 +611,8 @@
                         <img class="show-dark" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20-light.webp" alt="feature icon">
                       </div>
                       <div class="content">
-                        <h3 class="title">Schedule a Visit</h3>
-                        <p class="text">Book a free, no-obligation in-person or virtual tour.</p>
+                        <h3 class="title bold-weight">Schedule a Visit</h3>
+                        <p class="text light-weight">Book a free, no-obligation in-person or virtual tour.</p>
                       </div>
                     </div>
                     <div class="feature-box has_fade_anim how" data-fade-from="bottom">
@@ -611,8 +621,8 @@
                         <img class="show-dark" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20-light.webp" alt="feature icon">
                       </div>
                       <div class="content">
-                        <h3 class="title">Move In </h3>
-                        <p class="text">Sign a digital contract & start your hassle-free student life.</p>
+                        <h3 class="title bold-weight">Move In </h3>
+                        <p class="text light-weight">Sign a digital contract & start your hassle-free student life.</p>
                       </div>
                     </div>
                    
@@ -635,6 +645,18 @@
     padding: 1em;
     border-radius: 1em;
   }
+
+.light-weight{
+  margin-top: 16px;
+    font-weight: 200;
+    max-width: 250px;
+}
+
+.bold-weight{
+  font-weight: 800 !important;
+  font-family: 'Kanit' !important;
+}
+
 </style>
 
 
@@ -649,12 +671,12 @@
               </div>
               <div class="section-content">
                 <div class="section-title-wrapper">
-                  <div class="title-wrapper">
-                    <h2 class="section-title has_text_move_anim">Move into a <span>fully furnished, safe, and vibrant</span> co-living space designed for students like you</h2>
+                  <div class="title-wrapper"  >
+                    <h2 class="section-title has_text_move_anim" >Move into a <span>fully furnished, safe, and vibrant</span> co-living space designed for students like you</h2>
                   </div>
                 </div>
                 <div class="text-wrapper">
-                  <p class="text has_fade_anim">Discover thoughtfully designed co-living spaces tailored for students, offering comfort, convenience, and community..</p>
+                  <p class="text has_fade_anim" >Discover thoughtfully designed co-living spaces tailored for students, offering comfort, convenience, and community..</p>
                 </div>
                 <div class="btn-wrapper has_fade_anim">
                   <a href="#" class="wc-btn wc-btn-primary btn-text-flip"> <span data-text="Learn more">Learn
@@ -682,7 +704,10 @@
                           <div class="section-header">
                             <div class="section-title-wrapper">
                               <div class="title-wrapper">
-                                <h2 class="section-title has_text_move_anim">Frequently Asked Questions</h2>
+                                <h2 class="section-title has_text_move_anim" style="    font-size: 2.2em;
+                                line-height: 1em;
+                                font-weight: 800;
+                                font-family: 'Kanit';">Frequently Asked Questions</h2>
                               </div>
                             </div>
                             <div class="accordion-wrapper has_fade_anim" data-fade-from="left">
