get in touch section typo

--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -655,6 +655,7 @@
 .bold-weight{
   font-weight: 800 !important;
   font-family: 'Kanit' !important;
+  color: #555555 !important;
 }
 
 </style>
@@ -941,7 +942,7 @@
                 <div class="section-header">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h2 class="section-title has_text_move_anim">FInd Your Next Home Now- <span>Explore student-friendly PGs</span> with Gharpayy Bangalore
+                      <h2 class="section-title has_text_move_anim">Find Your Next Home Now- <span>Explore student-friendly PGs</span> with Gharpayy Bangalore
                        </h2>
                     </div>
                   </div>
