--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -586,7 +586,7 @@
                     <div class="title-wrapper">
                       <h2 class="section-title has_text_move_anim" style="font-weight: 800;
                       font-size: 2.2em;
-                      line-height: 1em; font-family: 'Kanit';"><span>How</span> It Works</h2>
+                      line-height: 1em; font-family: 'Kanit'; color: #555555 !important;"><span>How</span> It Works</h2>
                     </div>
                   </div>
                   <div class="text-wrapper">
@@ -708,7 +708,7 @@
                                 <h2 class="section-title has_text_move_anim" style="    font-size: 2.2em;
                                 line-height: 1em;
                                 font-weight: 800;
-                                font-family: 'Kanit';">Frequently Asked Questions</h2>
+                                font-family: 'Kanit';color: #555555 !important;">Frequently Asked Questions</h2>
                               </div>
                             </div>
                             <div class="accordion-wrapper has_fade_anim" data-fade-from="left">
