--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -272,7 +272,7 @@
                   </div>
                 </div>
                 <div class="thumb">
-                  <img src="https://crowdytheme.com/html/arolax/assets/imgs/gallery/img-s-35.webp" alt="image">
+                  <img src="../../boyspg/gharpayy_hero.jpg" alt="image" style="object-fit: fill;">
                 </div>
               </div>
             </div>
@@ -695,7 +695,11 @@
         </section>
         <!-- about area end  -->
 
-
+<style>
+  .service-box {
+        grid-template-columns: 1fr;
+    }
+</style>
 
 
                     <!-- pricing area start  -->
